--- a/app/views/users/confirmed.html.erb
+++ b/app/views/users/confirmed.html.erb
@@ -25,6 +25,15 @@
 
         <div class="confirmation-page__input-wrap">
         <%= password_field_tag :password, current_user.password, { required: true, placeholder: "Password", class: "input--text" }%>
+        
+        <div class='confirmation-page__radio-but confirmation-page__radio-male'>
+            Male
+        </div>
+        <div class='confirmation-page__radio-but confirmation-page__radio-female'>
+            Female
+        </div>
+
+        <%= hidden_field_tag :gender, :id => 'confirm_gender',:name => 'gender' %>
 
         <%# password_field_tag :password_confirmation, current_user.password_confirmation, { required: true, placeholder: "Confirm Password", class: "input--text" } %>
         </div>
@@ -33,7 +42,6 @@
              <%= text_field_tag :username, current_user.name, {class: "input--text", placeholder: "Username (shown to other users)", required: true}%>
          <% end %>
 
-        <%= select_tag(:gender, options_for_select([[],['Male', 1], ['Female', 2], ['Other', 3]]), { class: "input--select js-input--select", "data-placeholder" => "Gender",required: true }) %>
         <!-- Tried to use rails form helper but jquery ui datepicker was throwing an error -->
         <%# text_field_tag :e, nil, {class: "input--text js-datepicker", placeholder: "Birthday"}%>
         <%= text_field_tag :birthday, nil, {class: "js-datepicker js-validate-date input--text", placeholder: "Birthday", required: true}%>
