--- a/app/views/users/confirmed_mobile.html.erb
+++ b/app/views/users/confirmed_mobile.html.erb
@@ -28,16 +28,20 @@
             </div><!-- /.form-input--wrap -->
         </div><!-- /.confirmation-page__input-wrap -->
 
+        <div class='confirmation-page__radio-but confirmation-page__radio-male'>
+            Male
+        </div>
+        <div class='confirmation-page__radio-but confirmation-page__radio-female'>
+            Female
+        </div>
+
+        <%= hidden_field_tag :gender, :id => 'confirm_gender',:name => 'gender' %>
 
         <% if current_user.provider == 'facebook' %>
             <div class="form-input--wrap">
                     <% text_field_tag :username, current_user.name, {class: "form-input form-input--no-icon", placeholder: "Username (shown to other users)", required: true} %>
             </div>
         <% end %>
-
-        <div class="form-input--wrap">
-            <%= select_tag(:gender, options_for_select([['Male', 1], ['Female', 2], ['Other', 3]]), { class: "input--select", required: true, prompt: "Gender" }) %>
-        </div>
 
         <div class="form-input--wrap">
             <%= text_field_tag :birthday, nil, {class: "js-validate-date form-input form-input--no-icon", placeholder: "Birthday: mm/dd/yyyy", required: true}%>
