updating styles forgot password

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,7 @@
 @import "reset";
 @import "surveys";
 @import "forms";
+@import "password_resets";
 @import "social_btn";
 @import "jackhammer";
 @import "profiles";
