--- a/app/assets/stylesheets/password_resets.css.scss
+++ b/app/assets/stylesheets/password_resets.css.scss
@@ -1,3 +1,44 @@
 // Place all the styles related to the PasswordResets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@media (min-width: 600px) {
+
+  .intro-header {
+    color:#fff; 
+    font-size:32px;
+    margin-bottom:40px;
+  }
+  .mobile-header {
+    display:none;
+  }
+  .forgot-password-form {
+    label{
+      color:#fff;
+    }
+    .btn--homepage{
+      background:#fff;
+    }
+  }
+
+}
+
+@media (max-width: 599px) {
+
+  .intro-header {
+    color:#000; 
+  }
+
+  .forgot-password-form {
+    label{
+      color:#000;
+    }
+    input{
+      color:#000;
+    }
+    .btn--homepage{
+      @include submit-button;
+    }
+  }
+
+}
