--- a/app/views/users/confirmed_mobile.html.erb
+++ b/app/views/users/confirmed_mobile.html.erb
@@ -47,7 +47,7 @@
 
         <div class="form-input--wrap">
             <!-- js-validate-date -->
-            <%= text_field_tag :birthday, nil, {class: "js-cleave--date form-input form-input--no-icon", placeholder: "Birthday: mm/dd/yyyy", required: true}%>
+            <%= text_field_tag :birthday, nil, {class: "js-cleave--date js-validate-date form-input form-input--no-icon", placeholder: "Birthday: mm/dd/yyyy", required: true}%>
         </div>
 
         <div class="form-input--wrap form-input--wrap-submit">
