adding better mobile ad to 2048, lowering surveys to 10 credits, stubs for charity partners

--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -11,12 +11,6 @@
         });
       </script>
     <% end %>
-  <% elsif @game.slug == '2048' %>
-    <%= content_for :extra_top_js do %>
-      <div style='width:320px;margin:auto;margin-top:60px;'>
-        <%= render partial: "/ad_units/ad_mobile", :locals => {ad_slot: "9703283073"} %>
-      </div>
-    <% end %>
   <% end %>
 <% end %>
 <div class="game-container <%= @game.slug =='2048' ? 'g-2048' : '' %>">
@@ -43,6 +37,10 @@
   <% end %>
 </div>
 
-<script type='text/javascript'>
-
-</script>
+<% if @game.slug == '2048' %>
+  <%= content_for :extra_top_js do %>
+    <div style='width:320px;margin:auto;margin-top:60px;'>
+      <%= render partial: "/ad_units/ad_mobile", :locals => {ad_slot: "9703283073"} %>
+    </div>
+  <% end %>
+<% end %>
