--- a/app/views/ad_units/_ad_mobile.html.erb
+++ b/app/views/ad_units/_ad_mobile.html.erb
@@ -1,9 +1,10 @@
 <% if Rails.env.production? %>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+    <%= content_for :extra_top_js do %>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <% end %>
     <!-- Mobile Bottom -->
     <ins class="adsbygoogle"
-         style="display:inline-block;width:320;height:100px"
+         style="display:inline-block;width:320px;height:100px"
          data-ad-client="ca-pub-9909143434790892"
          data-ad-slot="<%= ad_slot %>"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
@@ -12,3 +13,5 @@
         Ad space.  Shown for dev and staging.
     </div>
 <% end %>
+
+
