updating og image

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -20,9 +20,8 @@
         <meta property="og:url" content="http://www.getluckee.com/" />
         <meta property="og:title" content="Luckee" />
         <meta property="og:description" content="Play free games. Earn Real Cash" />
-        <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
+        <meta property="og:image" content="http://www.getluckee.com/assets/fall_down/suicide_game_thumbnail.png" />
 
-        <meta name="twitter:image" content="http://www.getluckee.com/assets/fall_down/suicide_game_thumbnail.png" >
 
         <!-- Propeller ads -->
         <meta name="propeller" content="6d0c37444c1cbc4f10031a713459e4ba" />
