--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
         <meta property="og:url" content="http://www.getluckee.com/" />
         <meta property="og:title" content="Luckee" />
         <meta property="og:description" content="Play free games. Earn Real Cash" />
-        <meta property="og:image" content="http://www.getluckee.com/assets/fall_down/suicide_game_thumbnail.png" />
+        <meta property="og:image" content="http://www.getluckee.com/assets/getluckee.jpg" />
         
         <!-- Keywords to help adsense targetting -->
         <meta name='keywords' content='games, rewards, free, play, gaming, free games, play free online, earn cash, cash, cash rewards, charity, play free games, flappy bird, 2048, frogger, candy crush, bejewled, stick runner, match three, match 3, mobile games, mobile, desktop games, browser games, html5 games'>
