Add migrations and redesign desktop /games page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -317,6 +317,11 @@ p {
     overflow: visible;
     position: relative;
     z-index: 10;
+
+    .desktop-games-page & {
+        background-color: #5b5877;
+    }
+
     .nav-left {
         float: left;
         margin-left: 2.5%;
