--- a/app/assets/stylesheets/interior_pages.css.scss
+++ b/app/assets/stylesheets/interior_pages.css.scss
@@ -1,7 +1,7 @@
 @import "reset";
 // Interior Pages
 .desktop-games-page {
-    background-image: url(mountain_landscape_bg.jpg);
+    background-image: url(landscape-background.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
