Change background color of nav

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -323,7 +323,7 @@ p {
     z-index: 10;
 
     .desktop-games-page & {
-        background-color: #7d7a92;
+        background-color: #67657c;
     }
 
     .nav-left {
