Update desktop /games page

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -17,6 +17,12 @@ body {
         }
     }
 
+    &.mobile-games-page {
+        background-image: url(/assets/svgs/background-mobile.svg);
+        background-position: center;
+        background-size: cover;
+    }
+
     &.confirmation-page,
     &.mobile-header--hide,
     &.mobile-home,
