--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,7 +50,11 @@ body {
 }
 
 .desktop-games-page {
-    background-color: #ac94a2;
+    background-color: #67657c;
+    background-image: url(/assets/svgs/background-mobile.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .gameplay-page--dunkin {
@@ -173,6 +177,13 @@ p {
     display: inline-block;
     bottom: 5px;
     position: relative;
+
+    p,
+    a,
+    span {
+        font-family: $sans;
+    }
+
     &.show {
         .nav-dropdown__name {
             .fa-caret-down {
@@ -258,7 +269,7 @@ p {
     @include transition;
 
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1.05);
     }
 }
 .nav-dropdown__list {
@@ -321,10 +332,6 @@ p {
     overflow: visible;
     position: relative;
     z-index: 10;
-
-    .desktop-games-page & {
-        background-color: #67657c;
-    }
 
     .nav-left {
         float: left;
@@ -1451,6 +1458,7 @@ h1.arrow2 { font-size: 55px;
     }
 }
 .page__title {
+    font-family: $sans;
     font-size: 40px;
     font-weight: 200;
 
@@ -1512,6 +1520,7 @@ h1.arrow2 { font-size: 55px;
     right: 2px;
 }
 .game__info {
+    display: none;
     padding: 10px 5px 0;
 
     .credits {
@@ -1533,20 +1542,46 @@ h1.arrow2 { font-size: 55px;
     max-width: 225px;
     // min-height: 300px;
     border-radius: 2px;
-    // box-shadow: 0px 5px 10px rgba(127, 140, 141,0.5);
+    box-shadow: 0px 4px 10px 0px rgba(60,97,141,0.14),0px 3px 5px 0px rgba(69,89,116,0.19);
     margin: 30px 15px 0;
     background-color: $white;
     padding: 5px;
     transition: transform .2s ease-in-out;
 
+    .wrapper__hover-info {
+        background-color: $dark-gray;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: 10;
+        @include transition;
+    }
+
     &:hover {
-        transform: scale(1.1);
+        transform: scale(1.05);
         cursor: pointer;
+
+        .wrapper__hover-info {
+            opacity: 0.9;
+        }
     }
     .game__cost {
         float: right;
     }
 }
+
+.hover-info__copy {
+    color: $white;
+    font-family: $sans-sb;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    @include vertical-align;
+}
+
 .game-img-wrap {
     position: relative;
     .game-wrapper--locked & {
