--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -34,35 +34,9 @@
 
         <% @games.each do | g | %>
             <% if g.device_type != 5 || current_user.has_purchased_game(g.id) %>
-            <%= link_to game_path(g.slug,a:@advertiser_id) do %>
-                <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
-
-                    <%= image_tag(g.game_image({advertiser_id:@advertiser_id,desktop:true}), :class=>'game-image') %>
-
-                    <div class="game__info">
-                        <h1 class="game__title"><%= g.game_title({advertiser_id:@advertiser_id}) %></h1>
-                        <span class="credits">Earn Credits</span>
-                    </div>
-
-                </div> <!--/ .game-wrapper -->
-            <% end %>
+            <%= render "game_module", {game: g, advertiser_id: @advertiser_id} %>
             <% else %>
-                <%= link_to unlock_game_path(g.slug) do %>
-                    <div class="game-wrapper--locked game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
-
-                        <div class="game-img-wrap">
-                            <%= image_tag(g.desktop_image, :class=>'game-image') %>
-                            <img src="/assets/locked.png" class="locks">
-                        </div><!-- /.game-img-wrap -->
-
-                        <div class="game__info">
-                            <h1 class="game__title"><%= g.game_title({advertiser_id:@advertiser_id}) %></h1>
-                            <span class="credits">Unlock Game:</span>
-                            <span class="game__cost"><%= g.credit_cost %> credits</span>
-                        </div>
-
-                    </div> <!--/ .game-wrapper -->
-                <% end %>
+                <%= render "game_module_unlock", {game: g} %>
             <% end %>
         <% end %>
 
