--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -132,8 +132,11 @@
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-                ga('create', 'UA-58032053-2', {'userId': strUserId}); //reset third argument to 'auto'
+                <% if is_luckee_co? %>
+                    ga('create', 'UA-58032053-3'); 
+                <% else %>
+                    ga('create', 'UA-58032053-2', {'userId': strUserId}); //reset third argument to 'auto'
+                <% end %>
                 ga('set', 'dimension1', strUserId);
                 // if (strUserId) { ga('set', 'userId', strUserId); };
                 ga('send', 'pageview');
