--- a/app/views/static_pages/redeem_mobile.html.erb
+++ b/app/views/static_pages/redeem_mobile.html.erb
@@ -23,7 +23,7 @@
 				</li>
 			</a>
 	</ul>
-
+<% if false %>
 	<p class="page-title">Redeem credits for cash</p>
 	<ul>
 		<%= link_to redeem_credits_path(credits: 1000) do %>
@@ -45,4 +45,5 @@
 			</li>
 		<% end %>
 	</ul>
+	<% end %>
 </div>
