Start building landing page

--- a/app/views/static_pages/promo_home.html.erb
+++ b/app/views/static_pages/promo_home.html.erb
@@ -1,2 +1,11 @@
-<h2> Promo Landing Page</h2>
-<p> Insert fun landing page here</p>
+<% content_for :body_class, "marketing-site" %>
+
+<nav class="navigation">
+    <div class="navigation__left">
+        <a href=""><img src=""></a>
+    </div>
+
+    <div class="navigation__right">
+        <a class="button" href=""></a>
+    </div>
+</nav>
