Outline luckee.co landing page

--- a/app/views/static_pages/promo_home.html.erb
+++ b/app/views/static_pages/promo_home.html.erb
@@ -1,11 +1,75 @@
 <% content_for :body_class, "marketing-site" %>
 
-<nav class="navigation">
-    <div class="navigation__left">
-        <a href=""><img src=""></a>
-    </div>
+<section class="hero">
+    <div class="content content--hero">
+        <h1 class="hero__title">Immersive Branding</h1>
+        <p class="hero__copy">Bacon ipsum dolor amet kevin swine leberkas, strip steak ribeye tenderloin boudin short ribs. Turkey turducken jerky ball tip boudin ham beef pig corned beef jowl</p>
+        <a href="#" class="hero__btn js-hero__btn">Learn More</a>
+    </div><!-- /.content -->
+</section><!-- /.hero -->
 
-    <div class="navigation__right">
-        <a class="button" href=""></a>
+<section class="stats">
+    <div class="content content--stats">
+        <div class="stats__tout">
+            <h2 class="stats__num">100%</h2>
+            <h3 class="stats__subtitle">lorem ipsum amet</h3>
+        </div>
+
+        <div class="stats__tout">
+            <h2 class="stats__num">6x</h2>
+            <h3 class="stats__subtitle">lorem ipsum amet</h3>
+        </div>
+
+        <div class="stats__tout">
+            <h2 class="stats__num">&#x221e;</h2>
+            <h3 class="stats__subtitle">lorem ipsum amet</h3>
+        </div>
+    </div><!-- /.content -->
+</section><!-- /.stats -->
+
+<section class="mission">
+    <div class="content content--mission">
+        <div class="mission__left">
+            <img src="">
+        </div>
+
+        <div class="mission__right">
+            <h2 class="content__title">Lorem ipsum amet</h2>
+            <p class="content__copy">Bacon ipsum dolor amet shoulder ham hock kielbasa corned beef beef ribs spare ribs. Shoulder bresaola spare ribs, rump strip steak pork kevin andouille shank jowl landjaeger beef ribs hamburger leberkas. </p>
+            <a href="#" class="content__btn">Request a demo</a>
+        </div>
+    </div><!-- /.content -->
+</section><!-- /.mission -->
+
+<section class="process">
+    <div class="content content--process">
+        <h2 class="content__title">Start leveraging the power of immersive branding in 3 simple steps</h2>
+
+        <div class="process__touts">
+            <div class="process__tout">
+                <img src="/assets/marketing/talk.svg" class="process__icon">
+                <h3 class="process__title">Tell us about your campaign</h3>
+                <p class="process_desc">We handle the rest</p>
+            </div>
+
+            <div class="process__tout">
+                <img src="/assets/marketing/dev.svg" class="process__icon">
+                <h3 class="process__title">We build your custom experience</h3>
+                <p class="process_desc">Devoted team of engineers</p>
+            </div>
+
+            <div class="process__tout">
+                <img src="/assets/marketing/social.svg" class="process__icon">
+                <h3 class="process__title">Tell the world about it</h3>
+                <p class="process_desc">Share one simple link</p>
+            </div>
+        </div>
     </div>
-</nav>
+</section>
+
+<section class="landing-cta">
+    <div class="content content--landing-cta">
+        <h2 class="landing-cta__title">Still not convinced?</h2>
+        <h3 class="landing-cta__subtitle">Let us change your mind</p>
+    </div>
+</section>
