--- a/app/views/static_pages/promo_home.html.erb
+++ b/app/views/static_pages/promo_home.html.erb
@@ -6,6 +6,8 @@
         <p class="hero__copy">Bacon ipsum dolor amet kevin swine leberkas, strip steak ribeye tenderloin boudin short ribs. Turkey turducken jerky ball tip boudin ham beef pig corned beef jowl</p>
         <a href="#" class="hero__btn js-hero__btn">Learn More</a>
     </div><!-- /.content -->
+
+    <img class="continue-arrow js-continue-arrow" src="/assets/marketing/down-arrow.svg">
 </section><!-- /.hero -->
 
 <section class="stats">
@@ -30,12 +32,12 @@
 <section class="mission">
     <div class="content content--mission">
         <div class="mission__left">
-            <img src="">
+            <img src="/assets/marketing/iphone-mock.png">
         </div>
 
         <div class="mission__right">
             <h2 class="content__title">Lorem ipsum amet</h2>
-            <p class="content__copy">Bacon ipsum dolor amet shoulder ham hock kielbasa corned beef beef ribs spare ribs. Shoulder bresaola spare ribs, rump strip steak pork kevin andouille shank jowl landjaeger beef ribs hamburger leberkas. </p>
+            <p class="content__copy">Bacon ipsum dolor amet shoulder ham hock kielbasa corned beef beef ribs spare ribs. Shoulder bresaola spare ribs.</p>
             <a href="#" class="content__btn">Request a demo</a>
         </div>
     </div><!-- /.content -->
@@ -43,33 +45,42 @@
 
 <section class="process">
     <div class="content content--process">
-        <h2 class="content__title">Start leveraging the power of immersive branding in 3 simple steps</h2>
+        <div class="process__wrapper">
+            <h2 class="content__title content__title--process">Start leveraging the power of immersive branding in 3 simple steps</h2>
 
-        <div class="process__touts">
-            <div class="process__tout">
-                <img src="/assets/marketing/talk.svg" class="process__icon">
-                <h3 class="process__title">Tell us about your campaign</h3>
-                <p class="process_desc">We handle the rest</p>
-            </div>
+            <div class="process__touts">
+                <div class="process__tout">
+                    <img src="/assets/marketing/talk.svg" class="process__icon">
+                    <h3 class="process__title">Tell us about your campaign</h3>
+                    <p class="process__desc">We handle the rest</p>
+                </div>
 
-            <div class="process__tout">
-                <img src="/assets/marketing/dev.svg" class="process__icon">
-                <h3 class="process__title">We build your custom experience</h3>
-                <p class="process_desc">Devoted team of engineers</p>
-            </div>
+                <div class="process__tout">
+                    <img src="/assets/marketing/dev.svg" class="process__icon">
+                    <h3 class="process__title">We build your custom experience</h3>
+                    <p class="process__desc">Devoted team of engineers</p>
+                </div>
 
-            <div class="process__tout">
-                <img src="/assets/marketing/social.svg" class="process__icon">
-                <h3 class="process__title">Tell the world about it</h3>
-                <p class="process_desc">Share one simple link</p>
-            </div>
-        </div>
+                <div class="process__tout">
+                    <img src="/assets/marketing/social.svg" class="process__icon">
+                    <h3 class="process__title">Tell the world about it</h3>
+                    <p class="process__desc">Share one simple link</p>
+                </div>
+            </div><!-- /.process-touts -->
+        </div><!-- /.process__wrapper -->
     </div>
 </section>
 
 <section class="landing-cta">
     <div class="content content--landing-cta">
-        <h2 class="landing-cta__title">Still not convinced?</h2>
-        <h3 class="landing-cta__subtitle">Let us change your mind</p>
+        <div class="landing-cta__left">
+            <h2 class="landing-cta__title">Still not convinced?</h2>
+            <h3 class="landing-cta__subtitle">Let us change your mind</p>
+            <a href="" class="content__btn">Let's Talk</a>
+        </div>
+
+        <div class="landing-cta__right">
+            <img class="cta__img" src="/assets/marketing/iphone-hand.jpg">
+        </div>
     </div>
 </section>
