--- a/app/views/layouts/marketing.html.erb
+++ b/app/views/layouts/marketing.html.erb
@@ -3,7 +3,7 @@
     <head>
         <title><%= full_title(yield(:title)) %></title>
         <!-- Favicon -->
-        <link rel="shortcut icon" href="/assets/favicon-16x16.png">
+        <link rel="shortcut icon" href="/assets/marketing/favicon-16x16.png">
 
         <!-- FB Open Graph Data -->
         <meta property="og:url" content="http://www.getluckee.com/" />
@@ -22,6 +22,10 @@
         <%= stylesheet_link_tag "marketing", media: "all", "data-turbolinks-track" => true %>
         <%= javascript_include_tag "marketing", "data-turbolinks-track" => true %>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+        <!-- Opens Sans Google Font -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 
         <!-- Greensock for jackhammer -->
         <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"/></script>
@@ -101,7 +105,7 @@
 
         <nav class="navigation">
             <div class="navigation__left">
-                <a href=""><img src=""></a>
+                <a href="/landing"><img src="/assets/marketing/logo-purple.svg"></a>
             </div>
 
             <div class="navigation__right">
@@ -109,7 +113,7 @@
             </div>
         </nav>
 
-        <main class="content">
+        <main class="main-content">
             <%= yield %>
         </main>
 
