--- a/app/views/static_pages/promo_home.html.erb
+++ b/app/views/static_pages/promo_home.html.erb
@@ -75,12 +75,10 @@
     <div class="content content--landing-cta">
         <div class="landing-cta__left">
             <h2 class="landing-cta__title">Still not convinced?</h2>
-            <h3 class="landing-cta__subtitle">Let us change your mind</p>
+            <h3 class="landing-cta__subtitle">Let us change your mind</h3>
             <a href="" class="content__btn">Let's Talk</a>
         </div>
-
-        <div class="landing-cta__right">
-            <img class="cta__img" src="/assets/marketing/iphone-hand.jpg">
-        </div>
     </div>
+
+    <img class="cta__img" src="/assets/marketing/iphone-hand.jpg">
 </section>
